--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.536.0",
-    "next": "15.5.2",
+    "next": "latest",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-spring": "^10.0.1",
