--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
       "dom.iterable",
       "esnext"
     ],
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "skipLibCheck": true,
     // Next.js specific
     "incremental": true,
@@ -62,7 +62,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
